[tool.poetry]
name = "equiteez-indexer"
version = "0.1.0"
description = ""
authors = ["Tristan ALLAIRE <tristan.allaire@alarch.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
python-dateutil = "^2.8.2"
dipdup = { git = "https://github.com/mavryk-network/dipdup.git", branch = "hasura-model-comment" }
pdoc = "^15.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
